--- a/app/product.html
+++ b/app/product.html
@@ -182,7 +182,7 @@
                 <a class="product-gallery-slider-item-img fancybox-item" href="./images/dest/img/product-gal-img.jpg"  data-width="2048" data-height="1365" data-rjs="2" style="background-image: url('./images/dest/img/product-gal-img.jpg');"></a>
               </div>
               <div class="product-gallery-slider-item" data-image="./images/dest/img/product-gal-img.jpg">
-                <a href="#myVideo" class="product-gallery-slider-item-img fancybox-item">
+                <div href="#myVideo" class="product-gallery-slider-item-img">
                   <!-- Превью -->
                   <video 
                     class="slider-video lazyload"
@@ -194,7 +194,7 @@
                     <source src="./video/productVideo.mp4" type="video/mp4">
                     Your browser doesn't support HTML5 video tag.
                   </video>
-                  <!-- Оригинал -->
+                  <!-- Оригинал
                   <video 
                     id="myVideo"
                     class="popup-video lazyload"
@@ -208,8 +208,8 @@
                     style="display: none;">
                     <source src="./video/productVideo.mp4" type="video/mp4">
                     Your browser doesn't support HTML5 video tag.
-                </video>
-                </a>
+                </video> -->
+              </div>
               </div>
               <div class="product-gallery-slider-item" data-image="./images/dest/img/product-gal-img.jpg">
                 <a class="product-gallery-slider-item-img fancybox-item" href="./images/dest/img/product-gal-img.jpg"   data-width="2048" data-height="1365" data-rjs="2" style="background-image: url('./images/dest/img/product-gal-img.jpg');"></a>
