--- a/app/catalog.html
+++ b/app/catalog.html
@@ -425,7 +425,9 @@
             </div>
           </div>
         </div>
-
+        <p class="catalog-promo-title">
+          до начала <br>  BLACK FRIDAY
+        </p>
         <section class="сountdown-wrapper сountdown-wrapper--catalog">
           <div class="countdown-item">
             <div class="countdown-number">
