--- a/app/index.html
+++ b/app/index.html
@@ -264,6 +264,7 @@
                       </div>
                     </div>
                   </div>
+                  <a href="#" class="btn btn-white frame-item-btn-white btn-white--promo">Смотреть</a>
                 </div>
               </div>
             </div>
